package com.devops.HealthyLife.modeles;

public class Agenda {

	public void programmerRepas(Repas repas) {
		
	}
	
}
