package com.devops.HealthyLife.modeles;

public class Collation extends ComposantRepas {
	
	public Collation(String nom) {
		super(nom);
	}
	
	public Collation() {
		super();
	}
}
