package com.devops.HealthyLife.modeles;

public class Dessert extends ComposantRepas {
	
	public Dessert(String nom) {
		super(nom);
	}
	
	public Dessert() {
		super();
	}

}
