package com.devops.HealthyLife.modeles;

public class Entree extends ComposantRepas{
	
	public Entree(String nom) {
		super(nom);
	}
	
	public Entree() {
		super();
	}

}
