package com.devops.HealthyLife.modeles;

public class Plat extends ComposantRepas {
	public Plat(String nom) {
		super(nom);
	}
	
	public Plat() {
		super();
	}
}
